Bug fixing
- added validation of whitespaces;
- fixing layout bugs.

--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -59,6 +59,7 @@
 
   .play-list-wrap {
     height: auto;
+    margin-bottom: 10px;
   }
 
   .row {
@@ -74,6 +75,7 @@
 
   .play-list-wrap {
     height: auto;
+    margin-bottom: 10px;
   }
 
   .row {
